tests/errors/type_mismatch.orus
// Test type mismatch error handling
fn test_type_mismatch() -> i32 {
    let a: i32 = 10
    let b: bool = true
    
    print("Type Mismatch Test:")
    print("Attempting to add an integer and a boolean...")
    
    // This should produce a compilation error
    // let result = a + b
    
    print("Using compatible types instead:")
    let c: i32 = 20
    let result = a + c
    print(result)
    
    return 0
}

test_type_mismatch()
